--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -121,7 +121,7 @@
             }
             else $("#menuType").attr("w3-include-html", "menu.html");
             includeHTML();
-            if (window.location.hostname.toString() == 'localhost' || window.location.pathname.indexOf('test') != -1) {
+            if (window.location.hostname.toString() == 'localhost' || window.location.pathname.toLowerCase().indexOf('test') != -1) {
                 $("#na").css("background-color", "#ffde89");
             }
             if (window.location.href.indexOf('http://40.117.122.242/Road%20to%20Recovery/') != -1) {
