viewCandidate module work in progress, page is in it first developing steps..

--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -148,7 +148,7 @@
                                         <div class="panel-heading" id="col1">
                                             <h4 data-toggle="tooltip" data-placement="top" title="" class="panel-title">
                                                 <a href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">
-                                                    מועמדים להסעה
+                                                    מועמדים להסעה:
                                                     <span id="RideCandidates_ph"></span>
                                                 </a>
                                             </h4>
