--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1661,7 +1661,7 @@
     <!-- ↓ filtersModal ↓ -->
     <div class="modal fade" id="filtersModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" id="overRideBS_modal-dialog">
                 <div class="modal-header">
                     <h2 class="modal-title">ניהול הסעות - סינון מידע</h2>
                     <h4 id="bsModal_lowerHeadline">רק אזורים מסומנים יופיעו בתצוגה</h4>
@@ -1675,6 +1675,10 @@
         </div>
     </div>
     <!-- ↑ filtersModal ↑  -->
+    <!--
+
+        
+        -->
 
 </body>
 </html>
