manageRidepats last touch before uploading to prod

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1664,7 +1664,7 @@
             <div class="modal-content" id="overRideBS_modal-dialog">
                 <div class="modal-header">
                     <h2 class="modal-title">ניהול הסעות - סינון מידע</h2>
-                    <h4 id="bsModal_lowerHeadline">רק אזורים מסומנים יופיעו בתצוגה</h4>
+                    <h4>רק אזורים מסומנים יופיעו בתצוגה</h4>
                 </div>
                 <div id="filtersModal_placeHolder" class="modal-body"></div>
                 <div class="text-right modal-footer">
@@ -1674,11 +1674,6 @@
             </div>
         </div>
     </div>
-    <!-- ↑ filtersModal ↑  -->
-    <!--
-
-        
-        -->
 
 </body>
 </html>
