Fixed strings for NI reort

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -335,7 +335,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-2">
-                            <h1> עץ הדוחות</h1>
+                            <h1> עץ הדו"חות</h1>
                             <ul id="myUL" class="report_tree_UL">
                                 <!--  <li>
         <span>לרכז</span>
@@ -536,13 +536,13 @@
                                 <div class="row">
                                     <div class="col-sm-1"><input type="radio" template_name="radio" template_id="radio_all" style="margin-top: 10px" /></div>
                                     <div class="col-sm-10">
-                                        <label style="padding: 0.5em 0px;"> כל המתנדבים </label>
+                                        <label style="padding: 0.5em 0px;">    כל המתנדבים (למעט אלו שסומנו לא להציג שוב) </label>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-6"><input type="button" template_id="commit_to_ni_db" value="אל תדווח שוב על מתנדבים אלו" /> </div>
                                     <div class="col-sm-6">
-                                        <label style="padding: 0.5em 0px;"> (עדכון מסד הנתונים) </label>
+                                        <label style="padding: 0.5em 0px;"> הקשה פה תמחק את המתנדבים מכל דו"ח עתידי </label>
                                     </div>
                                 </div>
 
