--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -135,6 +135,7 @@
             $("#rp_amuta_vls_km").click(on_report_click);
             $("#rp_amuta_vls_list").click(on_report_click);
             $("#rp_amuta_vls_per_month").click(on_report_click);
+            $("#rp_pil_vls_per_month").click(on_report_click);
     
            
 
@@ -360,6 +361,12 @@
                                         <li><a class="report_link_cls" id="rp_vl_ride_year">הסעות השנה </a></li>
                                     </ul>
                                 </li>
+                                <li>
+                                    <span style="font-weight: bold;">פילוחים</span>
+                                    <ul class="report_tree_UL">
+                                        <li><a class="report_link_cls" id="rp_pil_vls_per_month">פרטי מתנדבים בפילוח חודשי </a></li>
+                                    </ul>
+                                </li>
                                 <li id="rp_special_list" style="display:none">
                                     <span style="font-weight: bold;">מיוחדים</span>
                                     <ul class="report_tree_UL">
@@ -459,6 +466,36 @@
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                             </div>
                             <br />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row" name="Container_for_wide_tables">
+                    <div class="col-sm-12">
+                        <div id="div_table_pil_vls_per_month" style="display:none" class="card-box table-responsive">
+                            <table id="table_pil_vls_per_month" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th title="DisplayName" class="timeCustomWidth"> שם המתנדב</th>
+                                        <th title="City" class="timeCustomWidth"> ישוב מגורים</th>
+                                        <th title="CellPhone" class="timeCustomWidth">טלפון</th>
+                                        <th title="JoinDate" class="timeCustomWidth"> תאריך הצטרפות</th>
+                                        <th title="Jan" class="timeCustomWidth">ינואר</th>
+                                        <th title="Feb" class="timeCustomWidth">פברואר</th>
+                                        <th title="Mar" class="timeCustomWidth">מרץ</th>
+                                        <th title="Apr" class="timeCustomWidth">אפריל</th>
+                                        <th title="May" class="timeCustomWidth">מאי</th>
+                                        <th title="Jun" class="timeCustomWidth">יוני</th>
+                                        <th title="Jul" class="timeCustomWidth">יולי</th>
+                                        <th title="Aug" class="timeCustomWidth">אוגוסט</th>
+                                        <th title="Sep" class="timeCustomWidth">ספטמבר</th>
+                                        <th title="Oct" class="timeCustomWidth">אוקטובר</th>
+                                        <th title="Nov" class="timeCustomWidth">נובמבר</th>
+                                        <th title="Dec" class="timeCustomWidth">דצמבר</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
                         </div>
 
                     </div>
