UI for Slice Volunteers per month

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -625,6 +625,26 @@
                         </div>
                         <div class="row report_template" name="template_PER_MONTH">
                         </div>
+                        <div class="row report_template" name="template_YTD">
+                            <div class="card-box">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
+                                            <div class="col-sm-10">
+                                                <select template_id="select_year_ytd" class="form-control">
+                                                    <option value="2020" selected>2020</option>
+                                                    <option value="2021">2021 - YTD</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
                         <div class="row report_template report_hidden" name="HIDDEN_MONTH">
                             <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
                         </div>
