Support last-12-months in slice volunteers report

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -364,7 +364,7 @@
                                 <li>
                                     <span style="font-weight: bold;">פילוחים</span>
                                     <ul class="report_tree_UL">
-                                        <li><a class="report_link_cls" id="rp_pil_vls_per_month">פרטי מתנדבים בפילוח חודשי </a></li>
+                                        <li><a class="report_link_cls" id="rp_pil_vls_per_month">הסעות מתנדבים בפילוח חודשי </a></li>
                                     </ul>
                                 </li>
                                 <li id="rp_special_list" style="display:none">
@@ -633,8 +633,9 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year_ytd" class="form-control">
-                                                    <option value="2020" selected>2020</option>
+                                                    <option value="last_12_months" selected>שנה אחורה מהיום</option>
                                                     <option value="2021">2021 - YTD</option>
+                                                    <option value="2020">2020</option>
                                                 </select>
                                             </div>
                                         </div>
