Update some report names; render day-of-week

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -351,7 +351,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
-                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר מתנדבים חודשי</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר המתנדבים המסיעים פר חודש</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -611,7 +611,8 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year" class="form-control">
-                                                    <option value="2020" selected>2020</option>
+                                                    <option value="2021" selected>2021</option>
+                                                    <option value="2020">2020</option>
                                                     <option value="2019">2019</option>
                                                 </select>
                                             </div>
@@ -654,7 +655,7 @@
             </div>
         </div>
         <footer class="footer text-right" style="right:0px">
-            2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+            2021 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
         </footer>
     </div>
 
