--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -136,6 +136,7 @@
             $("#rp_amuta_vls_list").click(on_report_click);
             $("#rp_amuta_vls_per_month").click(on_report_click);
             $("#rp_pil_vls_per_month").click(on_report_click);
+            $("#rp_pil_vl_ride_month").click(on_report_click);
     
            
 
@@ -365,6 +366,7 @@
                                     <span style="font-weight: bold;">פילוחים</span>
                                     <ul class="report_tree_UL">
                                         <li><a class="report_link_cls" id="rp_pil_vls_per_month">הסעות מתנדבים בפילוח חודשי </a></li>
+                                        <li><a class="report_link_cls" id="rp_pil_vl_ride_month">מתנדבים מסיעים בחתך חודשי </a></li>
                                     </ul>
                                 </li>
                                 <li id="rp_special_list" style="display:none">
@@ -457,6 +459,17 @@
                                             <th title="Patient" class="timeCustomWidth">חולה</th>
                                             <th title="Origin" class="timeCustomWidth">מוצא</th>
                                             <th title="Destionation" class="timeCustomWidth">יעד</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_pil_vl_ride_month" style="display:none" class="card-box table-responsive">
+                                <table id="table_pil_vl_ride_month" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                            <th title="Count" class="dateCustomWidth">כמות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
