Updated National report (only show people who did rides)

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -420,6 +420,7 @@
                                             <th title="Address" class="timeCustomWidth">כתובת</th>
                                             <th title="CityCityName" class="timeCustomWidth">ישוב מגורים</th>
                                             <th title="JoinDate" class="timeCustomWidth">תאריך הצטרפות</th>
+                                            <th title="CellPhone" class="timeCustomWidth">טלפון</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
